--- a/cafe-01-03-2016.md
+++ b/cafe-01-03-2016.md
@@ -6,4 +6,4 @@ Eu não sou café! <br />
 <br />
 Café se toma<br />
 Se tira do saco<br />
-Café já se ama ainda no pé<br />
+Café se ama ainda no pé<br />
