--- a/a-lago-19-03-2016.md
+++ b/a-lago-19-03-2016.md
@@ -5,6 +5,6 @@ Me padece de olhar<br />
 Me inunda na Dúvida<br />
 Me Molha o coração<br />
 <br />
-Me embriaga com extasê<br />
+Me embriaga com êxtase<br />
 Me jogo no lago<br />
 Alago<br />
